lab3/lab3_ws/log/build_2023-07-26_09-19-55/wall_follow/stderr.log
  File "/root/F1Tenth-Labs/lab3/lab3_ws/install/wall_follow/lib/python3.8/site-packages/wall_follow/wall_follow.py", line 42
    distance_b =
                ^
SyntaxError: invalid syntax

